[package]
name = "bvh2d"
description = "A fast BVH using SAH for 2d"
version = "0.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/mockersf/bvh2d"
documentation = "https://docs.rs/crate/bvh2d"
license = "MIT"

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [], optional = true }
glam = "0.22"
rayon = { version = "1.6.1", optional = true }

[features]
default = ["rayon"]